<resources>
    <string name="app_name">AventicaTestTask</string>
    <string name="search">Search</string>
    <string name="searchActivityTitle">Поиск книг</string>
    <string name="searchTip">Нажмите на иконку лупы в верхнем правом углу, и введите название
    нужной книги, приложение выдаст до 15 результатов поиска.</string>
    <string name="no_network">Не удалось загрузить данные, проверьте ваше подключение к сети.</string>
    <string name="no_results">Результатов по данному запросу не обнаружено.</string>
    <!--Просто тестовые надписи-->
    <string name="title_pl">Leather from the Raw Material to the Finished Product</string>
    <string name="author_pl">Adcock K. J.</string>
    <string name="publisher_pl">Издатель: Random House Digital, Inc.</string>
    <string name="publisherDate_pl">Дата издания: 2005&#8211;11&#8211;15</string>
    <string name="desc_pl">Here is the story behind one of the most remarkable Internet
    successes of our time. Based on scrupulous research and extraordinary access
    to Google.</string>
    <string name="pages_pl">Кол-во страниц: 207</string>
    <string name="category_pl">Категория: Business and Economics / Entrepreneurship</string>
    <!-- -->
    <string name="publisher">Издатель: %s</string>
    <string name="publisherDate">Дата издания: %s</string>
    <string name="pageCount">Кол-во страниц: %s</string>
    <string name="category">Категория: %s</string>
</resources>
