<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailBookActivity"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/main_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/detail_progressbar"
                android:layout_marginTop="6dp"
                android:visibility="gone"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
            <TextView
                android:id="@+id/fullTitleView"
                android:layout_below="@+id/detail_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailTitleTextViewStyle"
                tools:text="@string/title_pl"/>
            <TextView
                android:id="@+id/fullAuthorView"
                android:layout_below="@+id/fullTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/author_pl"
                style="@style/DetailAuthorTextViewStyle"/>
            <TextView
                android:id="@+id/publisherTextView"
                android:layout_below="@+id/fullAuthorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailInfoCardViewStyle"
                tools:text="@string/publisher_pl"/>
            <TextView
                android:id="@+id/publisherDateTextView"
                android:layout_below="@+id/publisherTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailInfoCardViewStyle"
                tools:text="@string/publisherDate_pl"/>
            <TextView
                android:id="@+id/descTextView"
                android:layout_below="@+id/publisherDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailInfoCardViewStyle"
                tools:text="@string/desc_pl"/>
            <TextView
                android:id="@+id/pageTextView"
                android:layout_below="@+id/descTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailInfoCardViewStyle"
                tools:text="@string/pages_pl"/>
            <TextView
                android:id="@+id/categoryView"
                android:layout_below="@+id/pageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DetailInfoCardViewStyle"
                tools:text="@string/category_pl"/>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>